--- a/MiniProject/index.html
+++ b/MiniProject/index.html
@@ -85,8 +85,14 @@
 
 
     <footer> 
-        <div id="footer_content">
-
+        <div class="footer_content">
+            <div class="left_footer">
+                <input type="text" id="txtSearch" name="txtSearch" placeholder="Search Term..." />
+                <a href="#"> <input type="button" id="btnSearch" value="GO" /> </a>
+            </div>
+            <div class="right_footer">
+                &copy; Copyright 2011.All Right Reserved. 
+            </div>
         </div>
     </footer>
 </body>
